<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_long_text">Tap the screen and buttons</string>
    <string name="red_text">RED</string>
    <string name="yellow_text">Yellow</string>
    <string name="green">Green</string>
</resources>
